@@ -2,6 +2,11 @@ package service;
 
 import model.*;
 import model.dto.ProductDTO;
+import model.dto.ProductMapper;
+import model.dto.CartItemDTO;
+import model.dto.CartItemMapper;
+import model.dto.OrderMapper;
+import model.dto.OrderItemMapper;
 import persistance.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -16,46 +21,52 @@ public class BuyerService {
     private final OrderRepository orderRepository;
     private final CartRepository cartRepository;
     private final UserRepository userRepository;
+    private final ProductMapper productMapper;
+    private final CartItemMapper cartItemMapper;
+    private final OrderMapper orderMapper;
+    private final OrderItemMapper orderItemMapper;
 
     @Autowired
     public BuyerService(
             ProductRepository productRepository,
             OrderRepository orderRepository,
             CartRepository cartRepository,
-            UserRepository userRepository) {
+            UserRepository userRepository,
+            ProductMapper productMapper,
+            CartItemMapper cartItemMapper,
+            OrderMapper orderMapper,
+            OrderItemMapper orderItemMapper) {
         this.productRepository = productRepository;
         this.orderRepository = orderRepository;
         this.cartRepository = cartRepository;
         this.userRepository = userRepository;
+        this.productMapper = productMapper;
+        this.cartItemMapper = cartItemMapper;
+        this.orderMapper = orderMapper;
+        this.orderItemMapper = orderItemMapper;
     }
 
     public List<ProductDTO> getAllProducts() {
-        List<Product> products =  productRepository.getAll();
-        List<ProductDTO> dtos = products.stream().map(product -> {
-            ProductDTO dto = new ProductDTO();
-            dto.setId(product.getId());
-            dto.setName(product.getName());
-            dto.setDescription(product.getDescription());
-            dto.setPrice(product.getPrice());
-            dto.setStock(product.getStock());
-            dto.setCategoryName(product.getCategory() != null ? product.getCategory().getName() : null);
-            return dto;
-        }).toList();
-        return dtos;
+        return productRepository.getAll().stream()
+            .map(productMapper::toDto)
+            .collect(Collectors.toList());
     }
 
-    public List<Product> filterProducts(String name, String category) {
+    public List<ProductDTO> filterProducts(String name, String category) {
         return productRepository.getAll().stream()
                 .filter(p -> (name == null || p.getName().toLowerCase().contains(name.toLowerCase()))
                         && (category == null || p.getCategory().getName().equalsIgnoreCase(category)))
+                .map(productMapper::toDto)
                 .collect(Collectors.toList());
     }
 
-    public List<CartItem> getCartItems(Buyer buyer) {
-        return cartRepository.getCartItems(buyer.getId());
+    public List<CartItemDTO> getCartItems(Buyer buyer) {
+        return cartRepository.getCartItems(buyer.getId()).stream()
+            .map(cartItemMapper::toDto)
+            .collect(Collectors.toList());
     }
 
-    public List<CartItem> addProductToCart(Buyer buyer, int product_id, int quantity) {
+    public void addProductToCart(Buyer buyer, int product_id, int quantity) {
         Product productToAdd = productRepository.findById(product_id);
         CartItem cartItem = new CartItem(0, buyer, productToAdd, quantity);
         CartItem isExistentCartItem =cartRepository.getCartItem(buyer, product_id);
@@ -65,16 +76,16 @@ public class BuyerService {
                 throw new IllegalArgumentException("Not enough stock available for this product.");
             }
             cartRepository.modifyCartItem(isExistentCartItem);
-            return cartRepository.getCartItems(buyer.getId());
+            cartRepository.getCartItems(buyer.getId()).stream().map(cartItemMapper::toDto).collect(Collectors.toList());
+            return;
         }
-
         cartRepository.addProductToCart(cartItem);
-        return cartRepository.getCartItems(buyer.getId());
+        cartRepository.getCartItems(buyer.getId()).stream().map(cartItemMapper::toDto).collect(Collectors.toList());
     }
 
-    public List<CartItem> removeProductFromCart(Buyer buyer, int productId) {
+    public List<CartItemDTO> removeProductFromCart(Buyer buyer, int productId) {
         cartRepository.removeProductFromCart(buyer, productId);
-        return cartRepository.getCartItems(buyer.getId());
+        return cartRepository.getCartItems(buyer.getId()).stream().map(cartItemMapper::toDto).collect(Collectors.toList());
     }
 
     public void placeOrder(Buyer buyer) {
@@ -82,15 +93,12 @@ public class BuyerService {
         if (cartItems.isEmpty()) {
             throw new IllegalArgumentException("Cart is empty. Cannot place order.");
         }
-
         Order order = new Order(0, buyer, LocalDateTime.now(), null);
         List<OrderItem> orderItems = cartItems.stream()
                 .map(item -> new OrderItem(order, item.getProduct(), item.getQuantity()))
                 .collect(Collectors.toList());
         order.setItems(orderItems);
         orderRepository.save(order);
-
-        // Update stock for each product in the order
         for (CartItem item : cartItems) {
             Product product = item.getProduct();
             int newStock = product.getStock() - item.getQuantity();
@@ -100,15 +108,9 @@ public class BuyerService {
             product.setStock(newStock);
             productRepository.edit(product);
         }
-
-        // Clear the cart after placing the order
         cartRepository.clearCart(buyer.getId());
-
     }
 
-    /**
-     * Resolve a buyer entity by username. Returns null if the user does not exist or is not a Buyer.
-     */
     public Buyer getBuyer(String username) {
         User user = userRepository.findByUsername(username);
         return (user instanceof Buyer) ? (Buyer) user : null;
